test/fails/bad_functions/bad_name3.lgl
int f() { int g = 3; return g; }

void main() {
    print f();
}
